address Francisco's comments